Added Bootstrap styles, json pipe and first config tabs view

--- a/webserver/src/app/app.component.html
+++ b/webserver/src/app/app.component.html
@@ -3,28 +3,23 @@
 
   <!-- <meta name="description" content="web server for IoT button configuration">
   <meta name="author" content="paclema"> -->
+
+  <!-- Bootstrap 3.0 -->
+
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+
+  <!-- Bootstrap 4.0 -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </head>
 
-<body>
+<body role="document" data-gr-c-s-loaded="true" style>
 
-
-  <!-- <div id="shifty-spritz" style="display: none;" tabindex="1">
-    <div id="words-shifty">
-      <div id="countdown-shifty" style="font-size: 25px; height: 50px; line-height: 50px; font-weight: bold; font-family: "droid sans";"></div>
-      <div id="left-shifty" style="font-size: 25px; height: 50px; line-height: 50px; font-weight: bold; font-family: "droid sans";"></div>
-      <div id="center-shifty" style="font-size: 25px; height: 50px; line-height: 50px; font-weight: bold; font-family: "droid sans"; color: rgb(250, 61, 61);"></div>
-      <div id="right-shifty" style="font-size: 25px; height: 50px; line-height: 50px; font-weight: bold; font-family: "droid sans";"></div>
-      <span id="clear-shifty"></span>
-    </div>
-    <div id="controls-shifty">
-      <i id="pause-play-shifty" class="fa fa-pause left-shifty"></i>
-      <i id="close-shifty" class="fa fa-times right-shifty"></i>
-      <div id="progress-bar-shifty">
-        <div id="progress-shifty"></div>
-        <div id="seek-shifty"></div>
-      </div>
-    </div>
-  </div> -->
 
 
 
@@ -62,31 +57,13 @@
     <!-- </div> -->
 
 
-    <!-- <form>
-      <div class="form-group">
-        <label for="exampleFormControlFile1">Example file input</label>
-        <input type="file" class="form-control-file" id="exampleFormControlFile1">
-      </div>
-    </form> -->
 
-    <!-- <div class="custom-file">
-      <input type="file" class="custom-file-input" id="customFile">
-      <label class="custom-file-label" for="customFile">Choose file</label>
-    </div> -->
-
-
-
-
-
-    <!-- <div class="row" style="position:relative-right; bottom:0; width:100%">
-     <div class="col-xs-2 col-md-2"><img src="img/logo.png" width="30" height="30"></div>
-     <div class="stretched-link float-right">
-       <p><a href="http://www.github.com/paclema/iot_button" class="stretched-link float-right">github.com/paclema/iot_button</a></p>
-     </div>
-   </div> -->
 
 
   </div>
+
+
+
 </body>
 
 
