--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -1,3 +1,50 @@
-<p>config-tabs works!</p>
-<ul class="nav nav-tabs" id="myTab" role="tablist"></ul>
-<div class="tab-content" id="myTabContent"></div>
+<!-- <p>config-tabs works!</p> -->
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+  <li class="nav-item" *ngFor="let tabname of configData | keyValueUnsorted ; first as isFirst; index as index">
+    <!-- Key: <b>{{tabname.key}}</b> and Value: <b>{{tabname.value}}</b> -->
+    <!-- <h2>{{tabname.key+ "-tab"}} </h2> -->
+
+    <span *ngIf="isFirst; then thenBlock; else elseBlock"></span>
+    <ng-template #thenBlock>
+      <a class="nav-link active" id='{{tabname.key+ "-tab"}}' data-toggle="tab" href='{{"#"+tabname.key}}' role="tab" aria-controls={{tabname.key}} aria-selected=true>
+        {{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1)}}
+      </a>
+    </ng-template>
+    <ng-template #elseBlock>
+      <a class="nav-link active" id='{{tabname.key+ "-tab"}}' data-toggle="tab" href='{{"#"+tabname.key}}' role="tab" aria-controls={{tabname.key}} aria-selected=false>
+        {{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1)}}
+      </a>
+    </ng-template>
+
+  </li>
+</ul>
+
+
+<div class="tab-content" id="myTabContent"  *ngFor="let tabname of configData | keyValueUnsorted ; first as isFirst; index as index">
+
+  <div *ngIf="isFirst; then thenBlock2; else elseBlock2"></div>
+  <ng-template #thenBlock2>
+
+    <div class="tab-pane fade active in" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
+      <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
+        <div id='{{tabname.key+"_body"}}' class="panel-body">
+        </div>
+
+    </div>
+
+  </ng-template>
+  <ng-template #elseBlock2>
+
+    <div class="tab-pane fade" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
+      <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
+        <div id='{{tabname.key+"_body"}}' class="panel-body">
+        </div>
+
+    </div>
+
+  </ng-template>
+
+
+
+
+</div>
