--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -4,14 +4,14 @@
     <!-- Key: <b>{{tabname.key}}</b> and Value: <b>{{tabname.value}}</b> -->
     <!-- <h2>{{tabname.key+ "-tab"}} </h2> -->
 
-    <span *ngIf="isFirst; then thenBlock; else elseBlock"></span>
+    <ng-container *ngIf="isFirst; then thenBlock; else elseBlock"></ng-container>
     <ng-template #thenBlock>
-      <a class="nav-link active" id='{{tabname.key+ "-tab"}}' data-toggle="tab" href='{{"#"+tabname.key}}' role="tab" aria-controls={{tabname.key}} aria-selected=true>
+      <a class="nav-link active" id='{{tabname.key+ "-tab"}}' data-toggle="tab" href='{{"#"+tabname.key}}' role="tab" aria-controls={{tabname.key}} aria-selected="true" aria-expanded="true">
         {{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1)}}
       </a>
     </ng-template>
     <ng-template #elseBlock>
-      <a class="nav-link active" id='{{tabname.key+ "-tab"}}' data-toggle="tab" href='{{"#"+tabname.key}}' role="tab" aria-controls={{tabname.key}} aria-selected=false>
+      <a class="nav-link" id='{{tabname.key+ "-tab"}}' data-toggle="tab" href='{{"#"+tabname.key}}' role="tab" aria-controls={{tabname.key}} aria-selected="false" aria-expanded="false">
         {{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1)}}
       </a>
     </ng-template>
@@ -20,31 +20,20 @@
 </ul>
 
 
-<div class="tab-content" id="myTabContent"  *ngFor="let tabname of configData | keyValueUnsorted ; first as isFirst; index as index">
-
-  <div *ngIf="isFirst; then thenBlock2; else elseBlock2"></div>
-  <ng-template #thenBlock2>
-
-    <div class="tab-pane fade active in" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
-      <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
-        <div id='{{tabname.key+"_body"}}' class="panel-body">
-        </div>
-
-    </div>
-
-  </ng-template>
-  <ng-template #elseBlock2>
-
-    <div class="tab-pane fade" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
-      <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
-        <div id='{{tabname.key+"_body"}}' class="panel-body">
-        </div>
-
-    </div>
-
-  </ng-template>
-
-
-
-
+<div class="tab-content" id="myTabContent">
+  <ng-container *ngFor="let tabname of configData | keyValueUnsorted ; first as isFirst; index as index">
+    <ng-container *ngIf="isFirst; then thenBlock2; else elseBlock2"></ng-container>
+    <ng-template #thenBlock2>
+      <div class="tab-pane fade show active" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
+        <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
+        <div id='{{tabname.key+"_body"}}' class="panel-body"></div>
+      </div>
+    </ng-template>
+    <ng-template #elseBlock2>
+      <div class="tab-pane fade" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
+        <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
+        <div id='{{tabname.key+"_body"}}' class="panel-body"></div>
+      </div>
+    </ng-template>
+  </ng-container>
 </div>
