--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -22,17 +22,45 @@
 
 <div class="tab-content" id="myTabContent">
   <ng-container *ngFor="let tabname of configData | keyValueUnsorted ; first as isFirst; index as index">
-    <ng-container *ngIf="isFirst; then thenBlock2; else elseBlock2"></ng-container>
-    <ng-template #thenBlock2>
+    <ng-container *ngIf="isFirst; then thenBlock; else elseBlock"></ng-container>
+    <ng-template #thenBlock>
       <div class="tab-pane fade show active" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
         <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
-        <div id='{{tabname.key+"_body"}}' class="panel-body"></div>
+        <div id='{{tabname.key+"_body"}}' class="panel-body row">
+
+          <ng-container *ngFor="let configparam of tabname.value | keyValueUnsorted ; first as isFirst; index as index">
+            <!-- <h5>{{configparam.key + " :" + configparam.value}}</h5> -->
+            <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
+              <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + configparam.key.slice(1).replace("_"," ")}}</label>
+              <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
+                <!-- here check if  {{tabname.key}} its info so the input is readonly -->
+                <!-- here check if  {{configparam.key}} contains password, file, etc..-->
+                <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}} name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}" placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}>
+              </div>
+            </div>
+          </ng-container>
+
+        </div>
       </div>
     </ng-template>
-    <ng-template #elseBlock2>
+    <ng-template #elseBlock>
       <div class="tab-pane fade" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
         <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
-        <div id='{{tabname.key+"_body"}}' class="panel-body"></div>
+        <div id='{{tabname.key+"_body"}}' class="panel-body row">
+
+          <ng-container *ngFor="let configparam of tabname.value | keyValueUnsorted ; first as isFirst; index as index">
+            <!-- <h5>{{configparam.key + " :" + configparam.value}}</h5> -->
+            <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
+              <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + configparam.key.slice(1).replace("_"," ")}}</label>
+              <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
+                <!-- here check if  {{tabname.key}} its info so the input is readonly -->
+                <!-- here check if  {{configparam.key}} contains password, file, etc..-->
+                <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}} name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}" placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}>
+              </div>
+            </div>
+          </ng-container>
+
+        </div>
       </div>
     </ng-template>
   </ng-container>
