--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -67,3 +67,64 @@
     </ng-template>
   </ng-container>
 </div>
+
+
+<!-- Example Template Driven Form -->
+
+<div class="container-fluid">
+  <h1>Test form:</h1>
+  <form #testForm="ngForm">
+
+    {{ testForm.value | json}}
+
+    <div ngModelGroup="tabConfigs">
+
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" class="form-control" ngModel name="userName">
+      </div>
+
+      <div class="form-group">
+        <label>Email</label>
+        <input type="email" class="form-control" ngModel name="email">
+      </div>
+
+      <div class="form-group">
+        <label>Phone</label>
+        <input type="tel" class="form-control" ngModel name="phone">
+      </div>
+
+      <div class="form-group">
+        <select class="custom-select" ngModel name="sleepMode">
+          <option selected>Sleep mode</option>
+          <option *ngFor="let mode of sleepModes">{{ mode }}</option>
+        </select>
+      </div>
+
+      <div class="mb-3">
+        <label>Time preference</label>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="timePreference" value="morning" ngModel>
+          <label class="form-check-label">Morning (9AM - 12AM)</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="timePreference" value="evening" ngModel>
+          <label class="form-check-label">Evening (5PM - 8PM)</label>
+        </div>
+      </div>
+
+      <div class="form-check mb-3">
+        <input class="form-check-input" type="checkbox" ngModel name="ota">
+        <label class="form-check-label">OTA</label>
+      </div>
+
+      <button class="btn btn-primary" type="submit">Submit form</button>
+
+    </div>
+
+
+  </form>
+</div>
+
+
+<!-- <button class="btn btn-primary">Submit</button> -->
