--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -70,33 +70,36 @@
 
 
 <!-- Example Template Driven Form -->
-
+<hr />
 <div class="container-fluid">
   <h1>Test form:</h1>
   <form #testForm="ngForm">
 
     {{ testForm.value | json}}
+    <hr />
+    {{ testFormModel | json}}
+
 
     <div ngModelGroup="tabConfigs">
 
       <div class="form-group">
         <label>Name</label>
-        <input type="text" class="form-control" ngModel name="userName">
+        <input type="text" class="form-control" [ngModel]="testFormModel.userName" name="userName">
       </div>
 
       <div class="form-group">
         <label>Email</label>
-        <input type="email" class="form-control" ngModel name="email">
+        <input type="email" class="form-control" [ngModel]="testFormModel.email" name="email">
       </div>
 
       <div class="form-group">
         <label>Phone</label>
-        <input type="tel" class="form-control" ngModel name="phone">
+        <input type="tel" class="form-control" [ngModel]="testFormModel.phone" name="phone">
       </div>
 
       <div class="form-group">
-        <select class="custom-select" ngModel name="sleepMode">
-          <option selected>Sleep mode</option>
+        <select class="custom-select" [ngModel]="testFormModel.sleepMode" name="sleepMode">
+          <option value="">Sleep mode</option>
           <option *ngFor="let mode of sleepModes">{{ mode }}</option>
         </select>
       </div>
@@ -104,17 +107,17 @@
       <div class="mb-3">
         <label>Time preference</label>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="timePreference" value="morning" ngModel>
+          <input class="form-check-input" type="radio" name="timePreference" value="morning" [ngModel]="testFormModel.timePreference">
           <label class="form-check-label">Morning (9AM - 12AM)</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="timePreference" value="evening" ngModel>
+          <input class="form-check-input" type="radio" name="timePreference" value="evening" [ngModel]="testFormModel.timePreference">
           <label class="form-check-label">Evening (5PM - 8PM)</label>
         </div>
       </div>
 
       <div class="form-check mb-3">
-        <input class="form-check-input" type="checkbox" ngModel name="ota">
+        <input class="form-check-input" type="checkbox" [ngModel]="testFormModel.ota" name="ota">
         <label class="form-check-label">OTA</label>
       </div>
 
