--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -179,6 +179,23 @@
       <input formControlName="confirmPassword" type="password" class="form-control" >
     </div>
 
+    <div formGroupName="address">
+      <div class="form-group">
+        <label>City</label>
+        <input formControlName="city" type="text" class="form-control" >
+      </div>
+
+      <div class="form-group">
+        <label>State</label>
+        <input formControlName="state" type="text" class="form-control" >
+      </div>
+
+      <div class="form-group">
+        <label>Postal Code</label>
+        <input formControlName="postalCode" type="text" class="form-control" >
+      </div>
+    </div>
+
     <div>{{registrationForm.value | json}}</div>
     <button class="btn btn-primary" type="submit">Register</button>
 
