--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -166,7 +166,18 @@
 
     <div class="form-group">
       <label>Username</label>
-      <input formControlName="userName" type="text" class="form-control" >
+      <input [class.is-invalid]="registrationForm.get('userName').invalid &&
+                                  registrationForm.get('userName').touched"
+        formControlName="userName" type="text" class="form-control" >
+      <!-- <small [class.d-none]="registrationForm.get('userName').valid ||
+                              registrationForm.get('userName').untouched"
+       class="text-danger">Username is required</small> -->
+      <div *ngIf="registrationForm.get('userName').invalid &&
+                    registrationForm.get('userName').touched" >
+        <small *ngIf="registrationForm.get('userName').errors?.required" class="text-danger">Username is required</small>
+        <small *ngIf="registrationForm.get('userName').errors?.minlength" class="text-danger">Username must be at least 3 characters</small>
+
+      </div>
     </div>
 
     <div class="form-group">
