--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -176,6 +176,8 @@
                     userName.touched" >
         <small *ngIf="userName.errors?.required" class="text-danger">Username is required</small>
         <small *ngIf="userName.errors?.minlength" class="text-danger">Username must be at least 3 characters</small>
+        <small *ngIf="userName.errors?.forbiddenName" class="text-danger">
+          Username {{userName.errors?.forbiddenName.value}} not allowed</small>
 
       </div>
     </div>
