--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -183,6 +183,19 @@
     </div>
 
     <div class="form-group">
+      <label>Email</label>
+      <input [class.is-invalid]="email.invalid && email.touched" formControlName="email" type="text" class="form-control" >
+      <small class="text-danger" [class.d-none]="email.valid || email.untouched"> Email is required</small>
+    </div>
+
+    <div class="form-check mb-3">
+      <input class="form-check-input" type="checkbox" formControlName="subscribe">
+      <label class="form-check-label">
+        Send me promotional offers
+      </label>
+    </div>
+
+    <div class="form-group">
       <label>Paswsword</label>
       <input formControlName="password" type="password" class="form-control" >
     </div>
