Add enableTutorial property to disable relative tutorial html template

--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -70,6 +70,7 @@
 
 
 <!-- Example Template Driven Form -->
+<div *ngIf="!enableTutorial">
 <hr />
 <div class="container-fluid">
   <h1>Test Template Driven Form:</h1>
@@ -235,4 +236,5 @@
 
   </form>
 
+</div>
 </div>
