--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -1,8 +1,12 @@
 <!-- <p>config-tabs works!</p> -->
 <ng-container *ngIf="errorMsg"><div class="alert alert-danger" role="alert">{{errorMsg}}</div></ng-container>
 
+<!-- Reactive Form with configTabsForm property -->
+<hr />
+<form [formGroup]="configTabsForm">
+<!-- <p>{{configTabsForm.value | json}} </p> -->
 <ul class="nav nav-tabs" id="myTab" role="tablist">
-  <li class="nav-item" *ngFor="let tabname of configData | keyValueUnsorted ; first as isFirst; index as index">
+  <li class="nav-item" *ngFor="let tabname of configTabsForm.controls | keyvalue: returnZero ; first as isFirst; index as index">
     <!-- Key: <b>{{tabname.key}}</b> and Value: <b>{{tabname.value}}</b> -->
     <!-- <h2>{{tabname.key+ "-tab"}} </h2> -->
 
@@ -23,21 +27,27 @@
 
 
 <div class="tab-content" id="myTabContent">
-  <ng-container *ngFor="let tabname of configData | keyValueUnsorted ; first as isFirst; index as index">
+  <ng-container *ngFor="let tabname of configTabsForm.controls | keyvalue : returnZero; first as isFirst; index as index">
+    <!-- <form [formGroup]="configTabsForm.controls[index]"> -->
     <ng-container *ngIf="isFirst; then thenBlock; else elseBlock"></ng-container>
     <ng-template #thenBlock>
-      <div class="tab-pane fade show active" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
+      <div [formGroupName]="tabname.key" class="tab-pane fade show active" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
         <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
-        <div id='{{tabname.key+"_body"}}' class="panel-body row">
 
-          <ng-container *ngFor="let configparam of tabname.value | keyValueUnsorted ; first as isFirst; index as index">
+        <div id='{{tabname.key+"_body"}}' class="panel-body row">
+          <ng-container *ngFor="let configparam of configTabsForm.get(tabname.key).controls | keyvalue : returnZero; first as isFirst; index as index">
             <!-- <h5>{{configparam.key + " :" + configparam.value}}</h5> -->
             <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
               <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + configparam.key.slice(1).replace("_"," ")}}</label>
               <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
                 <!-- here check if  {{tabname.key}} its info so the input is readonly -->
                 <!-- here check if  {{configparam.key}} contains password, file, etc..-->
-                <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}} name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}" placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}>
+                <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
+                name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
+                placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
+                [formControlName]="configparam.key">
+                <!-- formControlName="{{configTabsForm.controls[tabname.key].controls[configparam.key].controls}}"> -->
+                <!-- formControlName="{{testForm.get(tabname.key + '.' + configparam.key).controls}}"> -->
               </div>
             </div>
           </ng-container>
@@ -46,18 +56,21 @@
       </div>
     </ng-template>
     <ng-template #elseBlock>
-      <div class="tab-pane fade" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
+      <div formGroupName="{{tabname.key}}" class="tab-pane fade" id="{{tabname.key}}" role="tabpanel" aria-labelledby='{{tabname.key+ "-tab"}}'>
         <div class="panel-heading"><small>{{tabname.key.charAt(0).toUpperCase() + tabname.key.slice(1) + " configuration"}} </small></div>
         <div id='{{tabname.key+"_body"}}' class="panel-body row">
 
-          <ng-container *ngFor="let configparam of tabname.value | keyValueUnsorted ; first as isFirst; index as index">
+          <ng-container *ngFor="let configparam of configTabsForm.get(tabname.key).controls | keyvalue : returnZero; first as isFirst; index as index">
             <!-- <h5>{{configparam.key + " :" + configparam.value}}</h5> -->
             <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
               <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + configparam.key.slice(1).replace("_"," ")}}</label>
               <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
                 <!-- here check if  {{tabname.key}} its info so the input is readonly -->
                 <!-- here check if  {{configparam.key}} contains password, file, etc..-->
-                <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}} name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}" placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}>
+                <input [readonly]="tabname.key.toLowerCase() == 'info' ? 'readonly' : null" id={{configparam.key}}
+                name={{configparam.key}} type="{{configparam.key.includes('password') ? 'password' : 'text'}}"
+                placeholder={{configparam.key}} class="form-control input-md" value={{configparam.value}}
+                formControlName="{{configparam.key}}">
               </div>
             </div>
           </ng-container>
@@ -67,6 +80,10 @@
     </ng-template>
   </ng-container>
 </div>
+
+<hr>
+<p>{{configTabsForm.value | json}} </p>
+</form>
 
 
 <!-- Example Template Driven Form -->
