--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -101,8 +101,26 @@
   </ng-container>
 </div>
 
-<hr>
-<p>{{configTabsForm.value | json}} </p>
+
+<hr />
+<!-- <div>{{configTabsForm.value | json}} </div> -->
+
+<!-- Buttons -->
+<!-- <div class="container theme-showcase" role="main"> -->
+<!-- <div class="row"> -->
+<div id="buttons" class="float-right" style="margin-bottom: 20px; margin-right: 20px; float: right;">
+<!-- <div id="buttons" body class="panel-body"> -->
+  <div class="col-md-12">
+    <button [disabled]='!configTabsForm.valid' id="SaveConfig" class="btn btn-primary ml-2" type="submit">Save</button>
+    <button [disabled]='!configTabsForm.valid' id="Restart" class="btn btn-success ml-2" type="submit">Save & restart</button>
+
+    <button (click)="loadApiData()" id="LoadConfig" class="btn btn-warning ml-2" type="submit">Load configs</button>
+    <button id="Factory" class="btn btn-danger ml-2" type="submit">Factory defaults</button>
+    <button id="gpio_test" class="btn btn-info ml-2" type="submit">GPIO LED test</button>
+  </div>
+</div>
+<ng-container *ngIf="errorMsgPost"><hr /><div class="alert alert-danger" role="alert">{{errorMsgPost}}</div></ng-container>
+
 </form>
 
 
