--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -1,4 +1,5 @@
 <!-- <p>config-tabs works!</p> -->
+<div class="container-fluid">
 <ng-container *ngIf="errorMsg"><div class="alert alert-danger" role="alert">{{errorMsg}}</div></ng-container>
 
 <!-- Reactive Form with configTabsForm property -->
@@ -111,18 +112,27 @@
 <div id="buttons" class="float-right" style="margin-bottom: 20px; margin-right: 20px; float: right;">
 <!-- <div id="buttons" body class="panel-body"> -->
   <div class="col-md-12">
-    <button [disabled]='!configTabsForm.valid' id="SaveConfig" class="btn btn-primary ml-2" type="submit">Save</button>
-    <button [disabled]='!configTabsForm.valid' id="Restart" class="btn btn-success ml-2" type="submit">Save & restart</button>
+    <button (click)="onSubmitConfigTabs()" [disabled]='!configTabsForm.valid' id="SaveConfig"
+            class="btn btn-primary ml-2" type="submit">Save</button>
+    <button (click)="onSubmitConfigTabs()" [disabled]='!configTabsForm.valid' id="Restart"
+            class="btn btn-success ml-2" type="submit">Save & restart</button>
 
-    <button (click)="loadApiData()" id="LoadConfig" class="btn btn-warning ml-2" type="submit">Load configs</button>
-    <button id="Factory" class="btn btn-danger ml-2" type="submit">Factory defaults</button>
+    <button (click)="loadConfigFile()" id="LoadConfig" class="btn btn-warning ml-2" type="submit">Load configs</button>
+    <button (click)="configFactoryDefaults()" id="Factory" class="btn btn-danger ml-2" type="submit">Factory defaults</button>
     <button id="gpio_test" class="btn btn-info ml-2" type="submit">GPIO LED test</button>
   </div>
 </div>
-<ng-container *ngIf="errorMsgPost"><hr /><div class="alert alert-danger" role="alert">{{errorMsgPost}}</div></ng-container>
 
+
+<ng-container *ngIf="errorMsgPost"><hr /><div class="alert alert-danger fixed-bottom alert-dismissible fade show"
+    role="alert" style="width:50%; "><strong>Error: </strong>{{errorMsgPost}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+</ng-container>
 </form>
-
+</div>
 
 <!-- Example Template Driven Form -->
 <div *ngIf="!enableTutorial">
