--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -39,7 +39,7 @@
           <ng-container *ngFor="let configparam of configTabsForm.get(tabname.key).controls | keyvalue : returnZero; first as isFirst; index as index">
             <!-- <h5>{{configparam.key + " :" + configparam.value}}</h5> -->
             <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
-              <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + configparam.key.slice(1).replace("_"," ")}}</label>
+              <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
               <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
                 <!-- here check if  {{tabname.key}} its info so the input is readonly -->
                 <!-- here check if  {{configparam.key}} contains password, file, etc..-->
@@ -77,7 +77,7 @@
           <ng-container *ngFor="let configparam of configTabsForm.get(tabname.key).controls | keyvalue : returnZero; first as isFirst; index as index">
             <!-- <h5>{{configparam.key + " :" + configparam.value}}</h5> -->
             <div id='{{tabname.key + "_" + configparam.key + "_form"}}' class="form-group col-md-3">
-              <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + configparam.key.slice(1).replace("_"," ")}}</label>
+              <label class="control-label col-md-12 font-weight-bold" for={{tabname.key}}>{{configparam.key.charAt(0).toUpperCase() + (configparam.key.slice(1) | replaceUnderscore)}}</label>
               <div id='{{tabname.key + "_" + configparam.key + "_input"}}' class="col-md-12">
                 <!-- here check if  {{tabname.key}} its info so the input is readonly -->
                 <!-- here check if  {{configparam.key}} contains password, file, etc..-->
