--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -195,7 +195,7 @@
   </div>
 </div>
 
-
+<!-- Alerts -->
 <ng-container *ngIf="errorMsgPost"><hr /><div class="alert alert-danger fixed-bottom alert-dismissible fade show"
     role="alert" style="width:50%; "><strong>Error: </strong>{{errorMsgPost}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -203,8 +203,22 @@
     </button>
     </div>
 </ng-container>
+
+<ng-container *ngIf="dataMsgPost"><hr /><div class="alert alert-success fixed-bottom alert-dismissible fade show"
+    role="alert" style="width:50%; "><strong>Msg: </strong>{{dataMsgPost.message}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+</ng-container>
+
+
 </form>
 </div>
+
+
+
+
 
 <!-- Example Template Driven Form -->
 <div *ngIf="enableTutorial">
