Added /save_config API communication

--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -184,7 +184,7 @@
 <div id="buttons" class="float-right" style="margin-bottom: 20px; margin-right: 20px; float: right;">
 <!-- <div id="buttons" body class="panel-body"> -->
   <div class="col-md-12">
-    <button (click)="onSubmitConfigTabs()" [disabled]='!configTabsForm.valid' id="SaveConfig"
+    <button (click)="saveConfigTabs()" [disabled]='!configTabsForm.valid' id="SaveConfig"
             class="btn btn-primary ml-2" type="submit">Save</button>
     <button (click)="onSubmitConfigTabs()" [disabled]='!configTabsForm.valid' id="Restart"
             class="btn btn-success ml-2" type="submit">Save & restart</button>
