--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -186,8 +186,8 @@
   <div class="col-md-12">
     <button (click)="saveConfigTabs()" [disabled]='!configTabsForm.valid' id="SaveConfig"
             class="btn btn-primary ml-2" type="submit">Save</button>
-    <button (click)="onSubmitConfigTabs()" [disabled]='!configTabsForm.valid' id="Restart"
-            class="btn btn-success ml-2" type="submit">Save & restart</button>
+    <button (click)="restartDevice()" [disabled]='!configTabsForm.valid' id="Restart"
+            class="btn btn-success ml-2" type="submit">Restart device</button>
 
     <button (click)="loadConfigFile()" id="LoadConfig" class="btn btn-warning ml-2" type="submit">Load configs</button>
     <button (click)="configFactoryDefaults()" id="Factory" class="btn btn-danger ml-2" type="submit">Factory defaults</button>
