Added /gpio API communication

--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -191,7 +191,7 @@
 
     <button (click)="loadConfigFile()" id="LoadConfig" class="btn btn-warning ml-2" type="submit">Load configs</button>
     <button (click)="configFactoryDefaults()" id="Factory" class="btn btn-danger ml-2" type="submit">Factory defaults</button>
-    <button id="gpio_test" class="btn btn-info ml-2" type="submit">GPIO LED test</button>
+    <button (click)="gpioTest()" id="gpio_test" class="btn btn-info ml-2" type="submit">GPIO LED test</button>
   </div>
 </div>
 
