--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -1,4 +1,5 @@
 <!-- <p>config-tabs works!</p> -->
+<nb-card>
 <div class="container-fluid">
 <ng-container *ngIf="errorMsg"><div class="alert alert-danger" role="alert">{{errorMsg}}</div></ng-container>
 
@@ -389,3 +390,4 @@
 
 </div>
 </div>
+</nb-card>
