--- a/webserver/src/app/app.component.html
+++ b/webserver/src/app/app.component.html
@@ -6,8 +6,8 @@
     <div class="logo-container">
       <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
-      <a class="logo" href="#" (click)="navigateHome()"> 
-        <span>IoT Button configuration</span>
+      <a class="logo" href="#" (click)="navigateHome()">
+        <span>IoT Device Configuration</span>
         <!-- <legend style="margin: 20px">IoT Button configuration</legend> -->
       </a>
       </a>
