Fixed chartjs to print heap_free data

--- a/webserver/src/app/dashboard/dashboard.component.html
+++ b/webserver/src/app/dashboard/dashboard.component.html
@@ -38,13 +38,13 @@
                     (chartClick)="chartClicked($event)"></canvas>
         </div>
 
-        <div class="flex-item">
-
+        <!-- <div class="flex-item">
           <button mat-button mat-raised-button color="primary" (click)="randomize()">Randomize</button>
           <button mat-button mat-raised-button color="primary" (click)="pushOne()">Push</button>
           <button mat-button mat-raised-button color="primary" (click)="changeColor()">Recolor</button>
           <button mat-button mat-raised-button color="primary" (click)="changeLabel()">Change Label</button>
-        </div>
+        </div> -->
+
     </nb-card>
   </div>
 
