Added multiple lines on dashboard chart depending on ws object received

--- a/webserver/src/app/dashboard/dashboard.component.html
+++ b/webserver/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
 
   <div class="col-xxxl-12 col-xxl-12 col-md-12">
     <nb-card >
-      <nb-card-header>Charts</nb-card-header>
+      <nb-card-header>Realt time data</nb-card-header>
 
         <div style="display: block;">
           <!-- <canvas baseChart width="600" height="600" -->
