Added webapp version

--- a/webserver/src/app/app.component.html
+++ b/webserver/src/app/app.component.html
@@ -30,7 +30,9 @@
   <nb-layout-footer>
     <!-- <legend>paclema 2020</legend> -->
     <span class="created-by">
-      Created with ♥ by <b><a href="https://github.com/paclema" target="_blank">paclema</a></b> 2020
+      Created with ♥ by <b><a href="https://github.com/paclema" target="_blank">
+        paclema</a></b> 2020 - <b><a href="https://github.com/paclema/iot_button/releases"
+        target="_blank">v{{webappVersion}}</a></b>
     </span>
   </nb-layout-footer>
 
